--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -107,38 +107,55 @@ body #container #header a {
 }
 /* line 37, ../../../app/stylesheets/screen.scss */
 body #container #footer {
+  display: block;
   color: #ccc;
-  padding: 32px;
+  padding: 32px 0 32px 0;
   text-align: center;
 }
-
+/* line 42, ../../../app/stylesheets/screen.scss */
+body #container #footer a.feedback {
+  display: block;
+  color: #ccc;
+  text-decoration: none;
+}
 /* line 46, ../../../app/stylesheets/screen.scss */
+body #container #footer a.feedback:hover {
+  -moz-opacity: 0.8;
+  -webkit-opacity: 0.8;
+  -o-opacity: 0.8;
+  -khtml-opacity: 0.8;
+  opacity: 0.8;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
+}
+
+/* line 53, ../../../app/stylesheets/screen.scss */
 a:link {
   color: #888;
 }
-/* line 47, ../../../app/stylesheets/screen.scss */
+/* line 54, ../../../app/stylesheets/screen.scss */
 a:visited {
   color: #888;
 }
-/* line 48, ../../../app/stylesheets/screen.scss */
+/* line 55, ../../../app/stylesheets/screen.scss */
 a:hover {
   color: #aaa;
 }
 
-/* line 52, ../../../app/stylesheets/screen.scss */
+/* line 59, ../../../app/stylesheets/screen.scss */
 .formtastic li {
   margin: 8px 0 8px 0;
 }
-/* line 53, ../../../app/stylesheets/screen.scss */
+/* line 60, ../../../app/stylesheets/screen.scss */
 .formtastic label {
   display: block;
   margin-bottom: 8px;
 }
-/* line 57, ../../../app/stylesheets/screen.scss */
+/* line 64, ../../../app/stylesheets/screen.scss */
 .formtastic abbr {
   color: #993333;
 }
-/* line 58, ../../../app/stylesheets/screen.scss */
+/* line 65, ../../../app/stylesheets/screen.scss */
 .formtastic .inline-errors {
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
@@ -155,7 +172,7 @@ a:hover {
   font-size: 0.8em;
 }
 
-/* line 69, ../../../app/stylesheets/screen.scss */
+/* line 76, ../../../app/stylesheets/screen.scss */
 input[type="text"], input[type="password"] {
   border-width: 3px;
   border-color: #ccc #fff #fff #ccc;
@@ -172,7 +189,28 @@ input[type="text"], input[type="password"] {
   border-radius: 5px;
 }
 
-/* line 81, ../../../app/stylesheets/screen.scss */
+/* line 88, ../../../app/stylesheets/screen.scss */
+label {
+  display: block;
+}
+
+/* line 90, ../../../app/stylesheets/screen.scss */
+textarea {
+  width: 350px;
+  height: 200px;
+  padding: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
+  border-width: 3px;
+  border-color: #ccc #fff #fff #ccc;
+  border-style: solid;
+}
+
+/* line 101, ../../../app/stylesheets/screen.scss */
 input[type="button"], input[type="submit"] {
   border: none;
   -moz-border-radius: 3px;
@@ -185,12 +223,12 @@ input[type="button"], input[type="submit"] {
   padding: 7px 8px 7px 8px;
   color: #fff;
 }
-/* line 87, ../../../app/stylesheets/screen.scss */
+/* line 107, ../../../app/stylesheets/screen.scss */
 input[type="button"]:hover, input[type="submit"]:hover {
   background-color: #ccc;
 }
 
-/* line 90, ../../../app/stylesheets/screen.scss */
+/* line 110, ../../../app/stylesheets/screen.scss */
 #login_error {
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
@@ -212,17 +250,81 @@ input[type="button"]:hover, input[type="submit"]:hover {
   display: block;
 }
 
-/* line 101, ../../../app/stylesheets/screen.scss */
+/* line 121, ../../../app/stylesheets/screen.scss */
+#new_feedback {
+  text-align: center;
+}
+/* line 123, ../../../app/stylesheets/screen.scss */
+#new_feedback .fields {
+  width: 350px;
+  margin: 50px auto 0px auto;
+}
+/* line 126, ../../../app/stylesheets/screen.scss */
+#new_feedback .fields label {
+  text-align: left;
+  margin-bottom: 8px;
+}
+/* line 130, ../../../app/stylesheets/screen.scss */
+#new_feedback .fields input {
+  margin-bottom: 8px;
+}
+/* line 132, ../../../app/stylesheets/screen.scss */
+#new_feedback input[type="submit"] {
+  margin-top: 21px;
+}
+
+/* line 137, ../../../app/stylesheets/screen.scss */
+#home {
+  padding-left: 88px;
+  overflow: hidden;
+  display: inline-block;
+  margin: 0 auto 21px auto;
+}
+/* line 8, ../../../vendor/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/utilities/general/_hacks.scss */
+#home {
+  display: block;
+}
+/* line 142, ../../../app/stylesheets/screen.scss */
+#home .logo {
+  float: left;
+  margin-right: 3px;
+}
+/* line 147, ../../../app/stylesheets/screen.scss */
+#home #description {
+  margin-top: 25px;
+}
+/* line 149, ../../../app/stylesheets/screen.scss */
+#home #description #app_name {
+  font-family: 'courier';
+  font-size: 2em;
+  font-weight: bold;
+}
+/* line 153, ../../../app/stylesheets/screen.scss */
+#home #description #app_name #task {
+  margin-left: -0.5em;
+  color: #aaa;
+}
+/* line 158, ../../../app/stylesheets/screen.scss */
+#home #description .pitch {
+  list-style: square;
+  font-family: 'courier';
+  color: #888;
+  font-size: 1em;
+  line-height: 1.5em;
+  margin-left: 50px;
+}
+
+/* line 171, ../../../app/stylesheets/screen.scss */
 form#new_session {
   width: 300px;
   margin: 0 auto 0 auto;
 }
-/* line 104, ../../../app/stylesheets/screen.scss */
+/* line 175, ../../../app/stylesheets/screen.scss */
 form#new_session .fields {
   display: inline;
   float: left;
 }
-/* line 106, ../../../app/stylesheets/screen.scss */
+/* line 177, ../../../app/stylesheets/screen.scss */
 form#new_session .fields input[type="text"], form#new_session .fields input[type="password"] {
   display: block;
   margin-bottom: 8px;
@@ -230,26 +332,41 @@ form#new_session .fields input[type="text"], form#new_session .fields input[type
   display: inline;
   float: left;
 }
-/* line 112, ../../../app/stylesheets/screen.scss */
+/* line 183, ../../../app/stylesheets/screen.scss */
 form#new_session .fields label {
   display: inline;
   float: left;
-  margin-top: 11px;
+  margin: 11px 0 0 0;
 }
-/* line 116, ../../../app/stylesheets/screen.scss */
+/* line 187, ../../../app/stylesheets/screen.scss */
 form#new_session .fields input[type="submit"] {
   display: inline;
   float: right;
   font-size: 1em;
   margin: 3px 0 8px 0;
 }
-/* line 122, ../../../app/stylesheets/screen.scss */
-form#new_session a {
+/* line 193, ../../../app/stylesheets/screen.scss */
+form#new_session a.signup {
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
+  margin-top: 16px;
+  background-color: #aaa;
+  color: #fff;
   display: inline;
   float: right;
+  padding: 16px;
+  text-decoration: none;
+}
+/* line 201, ../../../app/stylesheets/screen.scss */
+form#new_session a.signup:hover {
+  background-color: #ccc;
 }
 
-/* line 125, ../../../app/stylesheets/screen.scss */
+/* line 205, ../../../app/stylesheets/screen.scss */
 .nav {
   overflow: hidden;
   display: inline-block;
@@ -260,7 +377,7 @@ form#new_session a {
 .nav {
   display: block;
 }
-/* line 129, ../../../app/stylesheets/screen.scss */
+/* line 209, ../../../app/stylesheets/screen.scss */
 .nav .new_list.button {
   padding: 0.8em 1em 0.8em 1em;
   background-color: #888;
@@ -274,7 +391,7 @@ form#new_session a {
   -khtml-border-radius: 8px;
   border-radius: 8px;
 }
-/* line 136, ../../../app/stylesheets/screen.scss */
+/* line 216, ../../../app/stylesheets/screen.scss */
 .nav .new_list.button:hover {
   -moz-opacity: 0.8;
   -webkit-opacity: 0.8;
@@ -285,7 +402,7 @@ form#new_session a {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
 }
 
-/* line 142, ../../../app/stylesheets/screen.scss */
+/* line 222, ../../../app/stylesheets/screen.scss */
 #lists .list {
   overflow: hidden;
   display: inline-block;
@@ -297,7 +414,7 @@ form#new_session a {
 #lists .list {
   display: block;
 }
-/* line 147, ../../../app/stylesheets/screen.scss */
+/* line 227, ../../../app/stylesheets/screen.scss */
 #lists .list .handle {
   display: inline;
   float: left;
@@ -307,74 +424,74 @@ form#new_session a {
   padding: 0.5em;
   cursor: url(/images/grab.png), move;
 }
-/* line 154, ../../../app/stylesheets/screen.scss */
+/* line 234, ../../../app/stylesheets/screen.scss */
 #lists .list .handle:active {
   cursor: url(/images/grabbing.png), move;
 }
-/* line 156, ../../../app/stylesheets/screen.scss */
+/* line 236, ../../../app/stylesheets/screen.scss */
 #lists .list .name {
   display: inline;
   float: left;
   margin-left: 16px;
   width: 388px;
 }
-/* line 160, ../../../app/stylesheets/screen.scss */
+/* line 240, ../../../app/stylesheets/screen.scss */
 #lists .list .name .items_count {
   display: inline;
   color: #888;
   font-size: 0.5em;
   font-weight: bold;
 }
-/* line 167, ../../../app/stylesheets/screen.scss */
+/* line 247, ../../../app/stylesheets/screen.scss */
 #lists .list .delete.button {
   text-decoration: none;
   display: inline;
   float: right;
 }
 
-/* line 175, ../../../app/stylesheets/screen.scss */
+/* line 255, ../../../app/stylesheets/screen.scss */
 #list #info {
   text-align: center;
   margin: 3px 0 16px 0;
 }
-/* line 178, ../../../app/stylesheets/screen.scss */
+/* line 258, ../../../app/stylesheets/screen.scss */
 #list #info #name {
   font-size: 1.5em;
   font-weight: bold;
   text-decoration: none;
 }
-/* line 184, ../../../app/stylesheets/screen.scss */
+/* line 264, ../../../app/stylesheets/screen.scss */
 #list #info form input[type="text"] {
   margin: 0 auto 0 auto;
   width: 300px;
 }
-/* line 188, ../../../app/stylesheets/screen.scss */
+/* line 268, ../../../app/stylesheets/screen.scss */
 #list #info form .loader {
   padding: 8px;
   position: absolute;
   visibility: hidden;
 }
-/* line 195, ../../../app/stylesheets/screen.scss */
+/* line 275, ../../../app/stylesheets/screen.scss */
 #list form#new_item {
   text-align: center;
   margin: 32px 0 25px 0;
 }
-/* line 199, ../../../app/stylesheets/screen.scss */
+/* line 279, ../../../app/stylesheets/screen.scss */
 #list form#new_item .fields #item_body {
   width: 300px;
   margin-right: 11px;
 }
-/* line 200, ../../../app/stylesheets/screen.scss */
+/* line 280, ../../../app/stylesheets/screen.scss */
 #list form#new_item .fields input[type="submit"] {
   width: 80px;
 }
-/* line 202, ../../../app/stylesheets/screen.scss */
+/* line 282, ../../../app/stylesheets/screen.scss */
 #list form#new_item .loader {
   margin: 8px 0 8px 3px;
   position: absolute;
   visibility: hidden;
 }
-/* line 209, ../../../app/stylesheets/screen.scss */
+/* line 289, ../../../app/stylesheets/screen.scss */
 #list .items .item {
   overflow: hidden;
   display: inline-block;
@@ -394,11 +511,11 @@ form#new_session a {
 #list .items .item {
   display: block;
 }
-/* line 217, ../../../app/stylesheets/screen.scss */
+/* line 297, ../../../app/stylesheets/screen.scss */
 #list .items .item:active {
   cursor: url(/images/grabbing.png), default;
 }
-/* line 218, ../../../app/stylesheets/screen.scss */
+/* line 298, ../../../app/stylesheets/screen.scss */
 #list .items .item:hover {
   -moz-opacity: 0.7;
   -webkit-opacity: 0.7;
@@ -408,14 +525,14 @@ form#new_session a {
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
 }
-/* line 219, ../../../app/stylesheets/screen.scss */
+/* line 299, ../../../app/stylesheets/screen.scss */
 #list .items .item .checkbox_wrapper {
   display: inline;
   float: left;
   padding: 11px;
   cursor: default;
 }
-/* line 224, ../../../app/stylesheets/screen.scss */
+/* line 304, ../../../app/stylesheets/screen.scss */
 #list .items .item .body {
   padding: 10px 0 8px 0;
   display: inline;
@@ -423,7 +540,7 @@ form#new_session a {
   width: 388px;
   line-height: 1.8em;
 }
-/* line 230, ../../../app/stylesheets/screen.scss */
+/* line 310, ../../../app/stylesheets/screen.scss */
 #list .items .item input.item_body {
   display: inline;
   float: left;
@@ -431,14 +548,14 @@ form#new_session a {
   padding: 0px;
   margin: 12px 0 12px 0;
 }
-/* line 236, ../../../app/stylesheets/screen.scss */
+/* line 316, ../../../app/stylesheets/screen.scss */
 #list .items .item .loader {
   display: inline;
   float: left;
   margin: 12px 0px 12px 12px;
   visibility: hidden;
 }
-/* line 242, ../../../app/stylesheets/screen.scss */
+/* line 322, ../../../app/stylesheets/screen.scss */
 #list .items .item .delete_wrapper .delete.button {
   display: inline;
   float: right;
@@ -446,16 +563,16 @@ form#new_session a {
   text-decoration: none;
   color: #aaa;
 }
-/* line 247, ../../../app/stylesheets/screen.scss */
+/* line 327, ../../../app/stylesheets/screen.scss */
 #list .items .item .delete_wrapper .delete.button:hover {
   color: #c60;
 }
-/* line 251, ../../../app/stylesheets/screen.scss */
+/* line 331, ../../../app/stylesheets/screen.scss */
 #list .items .item.complete {
   background-color: #eee;
   color: #aaa;
 }
-/* line 254, ../../../app/stylesheets/screen.scss */
+/* line 334, ../../../app/stylesheets/screen.scss */
 #list .items .item.complete .delete.button {
   -moz-opacity: 0.8;
   -webkit-opacity: 0.8;
@@ -465,7 +582,7 @@ form#new_session a {
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
 }
-/* line 254, ../../../app/stylesheets/screen.scss */
+/* line 334, ../../../app/stylesheets/screen.scss */
 #list .items .item.complete .delete.button:hover {
   -moz-opacity: 0.8;
   -webkit-opacity: 0.8;
@@ -475,7 +592,7 @@ form#new_session a {
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
 }
-/* line 258, ../../../app/stylesheets/screen.scss */
+/* line 338, ../../../app/stylesheets/screen.scss */
 #list #completed_items .item {
   cursor: default;
 }
