--- a/app/views/feedbacks/new.html.haml
+++ b/app/views/feedbacks/new.html.haml
@@ -1,13 +1,12 @@
 -semantic_form_for @feedback do |form|
   .fields
-    -email = current_user && current_user.email
-    -unless email
-      =form.input :email
+    -email = current_user && current_user.email || ''
+    =form.input :email, :label => "your email address"
     =#text_area_tag "feedback[body]", '', :class => 'field'
     =form.input :body, :as => :text
     =submit_tag "submit feedback"
     
 :javascript
   $(document).ready(function(e) {
-    $("#new_feedback .field:first").focus();
+    $("#new_feedback #feedback_email").select();
   });
