--- a/app/views/feedbacks/new.html.haml
+++ b/app/views/feedbacks/new.html.haml
@@ -1,5 +1,5 @@
 -semantic_form_for @feedback do |form|
-  .fields
+  -form.inputs do
     -email = current_user && current_user.email || ''
     =form.input :email, :label => "your email address"
     =#text_area_tag "feedback[body]", '', :class => 'field'
