--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -77,7 +77,7 @@ a {
     font-size: 0.8em;
   }
 }  
-input[type="text"], input[type="password"] {
+input[type="text"], input[type="password"], textarea {
   border: {
     width: 3px;
     color: #ccc #fff #fff #ccc;
@@ -89,18 +89,8 @@ input[type="text"], input[type="password"] {
   width: 350px;
   @include border-radius(5px);
 }
-label {display: block;
-}
 textarea {
-  width: 350px;
   height: 200px;
-  padding: 5px;
-  @include border-radius(5px);
-  border: {
-    width: 3px;
-    color: #ccc #fff #fff #ccc;
-    style: solid;
-  }
 }
 input[type="button"], input[type="submit"] {
   border: none;
