Changed titles to show 'TinkerTask'

--- a/app/views/feedbacks/new.html.haml
+++ b/app/views/feedbacks/new.html.haml
@@ -1,3 +1,4 @@
+-@title = "Feedback"
 -semantic_form_for @feedback do |form|
   -form.inputs do
     -email = current_user && current_user.email || ''
