--- a/app/views/session/new.html.haml
+++ b/app/views/session/new.html.haml
@@ -22,7 +22,7 @@
     #login_error
       =flash[:login_error]
 
--form_tag session_path, :id => 'new_session' do
+-form_tag login_path, :id => 'new_session' do
   .fields
     =text_field_tag :username
     =password_field_tag :password
