--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -2,7 +2,7 @@
 -semantic_form_for @user do |form|
   =render :partial => "users/form", :object => form
   -form.buttons do
-    =form.commit_button "sign up instantly"
+    =form.commit_button "sign up"
     
 :javascript
   $(document).ready(function() {
